<resources>
    <string name="app_name">banco-ennama</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="introduce_tu_dni">introduce tu dni</string>
    <string name="introduce_tu_contrase_a">introduce_tu_contrase_a</string>
    <string name="introduce_tu_contrasena">introduce tu contrasena</string>
    <string name="entrar">Entrar</string>
    <string name="salir">Salir</string>
    <string name="add_task">Add task</string>
    <string name="bienvenido_a">Bienvenido/a</string>
    <string name="bienvenido_a_mi_banco">Bienvenido/a a mi banco</string>
    <string name="entrar2">ENTRAR</string>
    <string name="posici_n_global">POSICIÓN GLOBAL</string>
    <string name="transferencias">TRANSFERENCIAS</string>
    <string name="cambiar_contrase_a">CAMBIAR CONTRASEÑA</string>
    <string name="movimientos">MOVIMIENTOS</string>
    <string name="promociones">PROMOCIONES</string>
    <string name="cajeros">CAJEROS</string>
    <string name="salir2">SALIR</string>

</resources>