<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:navigationIcon="@drawable/ic_menu"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"/>
        
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bank_24"
            app:layout_anchor="@id/bab"
            android:contentDescription="@string/add_task"
            ></com.google.android.material.floatingactionbutton.FloatingActionButton>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvBienvenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <ImageView
                    android:id="@+id/iv"
                    android:layout_width="@dimen/card_img_size"
                    android:layout_height="@dimen/card_img_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/usuario"/>

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/bienvenido_a"
                    app:layout_constraintStart_toEndOf="@id/iv"
                    android:layout_marginStart="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    />

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="58dp"
                    android:text=""
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/iv"
                    app:layout_constraintTop_toBottomOf="@id/tv" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvBotones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clBotones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/posicionGlobal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/posici_n_global"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/movimientos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movimientos"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/posicionGlobal"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/transferencias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transferencias"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movimientos"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cambiarContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cambiar_contrase_a"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/transferencias"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/promociones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/promociones"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cambiarContrasena"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cajeros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cajeros"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/promociones"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/salir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/salir2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cajeros"
                    />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>